# monorepo-tooling-demos

./: .gitignore  README.md
bazel/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  WORKSPACE.bazel  bazel  bazel-bazel  bazel-bin  bazel-out  bazel-testlogs
bazel/my_rules/: defs.bzl
bazel/my_rules/rules/: BUILD.bazel
bldr/: .bldrrc.mjs  .envrc  .gitignore  .tool-versions  Makefile  README.md  bun.lockb  package.json  tsconfig.json
bldr/bldr/: Makefile  README.md  bun.lockb  eslint.config.js  package-lock.json  package.json  tsconfig.json
bldr/scripts/: build-node.sh
gnumake/: .gitignore  Makefile  Makefile.cleanPkgJson.js  bezel.yml
lerna-2x/: lerna.json  package.json
lerna-7x/: .pnp.cjs  nx.json  package.json
lerna-7x-compat/: nx.json  package.json
lerna-8x/: .pnp.cjs  .yarnrc.yml  package.json
lerna-8x-hybrid/: .gitignore  .yarnrc.yml  fix-deps.mjs  lerna-crosslink-build-demo.sh  lerna-crosslink-build.mjs  monorepocli.mjs  nx.json  package.json  rmNestedDevDependencies-demo.sh  rmNestedDevDependencies.mjs
lerna-8x-legacy/: fix-deps.mjs  nx.json  package.json
mono/: .envrc  .gitignore
npm-workspaces/: .npmrc  package-lock.json  package.json
nx/: nx.json  package.json  pnpm-lock.yaml
pnpm-workspaces/: .npmrc  package.json  pnpm-lock.yaml  pnpm-lock2.yaml
rush/: package.json  rush.json
rush-yarn/: package.json  rush copy.json  rush.json
turbo/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
turbo2/: completions.sh  package.json  pnpm-lock.yaml  turbo.json
yarn-workspaces/: .yarnrc.yml  README.md  package.json
(+41 files in other folders)
